Remove outdated jdk11 profile